[metadata]
name = safe-route-path
version = 0.1.0
description = An awesome package is coming soon! 🎉
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kludex/safe-route-path
author = Marcelo Trylesinski
author_email = marcelotryle@email.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Twitter = https://twitter.com/marcelotryle

[options]
packages = find:
include_package_data = True
install_requires =
python_requires = >=3.8.0

[flake8]
statistics = True
max-line-length = 88
ignore = E203,E501,W503
